backend with cloud database

--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ DB_PASSWORD=123456
 DB_NAME=dreaminalgo
 DB_PORT=5432
 
+DATABASE_URL=postgresql://postgres:KhUMkVkuZEHdijNRrCODSmaWNAWSjjzB@shinkansen.proxy.rlwy.net:59168/railway
+
 JWT_ACCESS_SECRET=access_token_secret_change_this
 JWT_REFRESH_SECRET=refresh_token_secret_change_this
 
