stratergies and broker completed

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "razorpay": "^2.9.6",
+    "sib-api-v3-sdk": "^8.5.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
