--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.16.3",
     "razorpay": "^2.9.6",
     "sib-api-v3-sdk": "^8.5.0",
+    "socket.io": "^4.8.3",
     "ws": "^8.18.3"
   },
   "devDependencies": {
